# SmartMirror-Image-Handler

./: .gitignore  SmartMirror-Image-Handler.js  node_helper.js
image_handler/: CMakeLists.txt
image_handler/python_utils/: show_camera_streams.py
image_handler/src/: MJEPEGWriter.cpp  MJPEGWriter.h  SafeQueue.h  camera_grabber.cpp  camera_grabber.h  image_appsink_writer.cpp  image_appsink_writer.h  main.cpp  main.h
